First version API

--- a/api/shuttle/Cargo.toml
+++ b/api/shuttle/Cargo.toml
@@ -8,3 +8,13 @@ actix-web = "4.3.1"
 shuttle-actix-web = "0.47.0"
 shuttle-runtime = "0.47.0"
 tokio = "1.26.0"
+shuttle-shared-db = { version = "0.47.0",features = ["postgres"] }
+sqlx = { version = "0.7.4", default-features = false, features = [
+    "runtime-tokio",
+    "tls-native-tls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "json",
+] }
