Moved APIs to lib

--- a/api/shuttle/Cargo.toml
+++ b/api/shuttle/Cargo.toml
@@ -18,3 +18,5 @@ sqlx = { version = "0.7.4", default-features = false, features = [
     "chrono",
     "json",
 ] }
+tracing="0.1"
+api-lib = { path = "../lib"}
