--- a/api/lib/Cargo.toml
+++ b/api/lib/Cargo.toml
@@ -19,3 +19,6 @@ sqlx = { version = "0.7.4", default-features = false, features = [
     "json",
 ] }
 tracing="0.1"
+
+[dev-dependencies]
+actix-rt = "2.0.0"
