--- a/api/lib/Cargo.toml
+++ b/api/lib/Cargo.toml
@@ -19,6 +19,13 @@ sqlx = { version = "0.7.4", default-features = false, features = [
     "json",
 ] }
 tracing="0.1"
+shared = { path = "../../shared", features = ["backend"]}
+serde = "1.0"
+serde_json = "1.0"
+async-trait = "0.1.82"
+uuid = { version = "1.4.2", features = ["v4", "serde", "js"] }
+chrono = { version = "0.4.19", features = ["serde"] }
 
 [dev-dependencies]
 actix-rt = "2.0.0"
+
