--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -4,3 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
+chrono = { version = "0.4", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"]}
+sqlx = { version = "0.7.4", default-features = false, features = [
+    "runtime-tokio",
+    "tls-native-tls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "json",
+], optional = true }
+
+[features]
+backend=["sqlx"]
