--- a/api/shuttle/Cargo.toml
+++ b/api/shuttle/Cargo.toml
@@ -20,3 +20,4 @@ sqlx = { version = "0.7.4", default-features = false, features = [
 ] }
 tracing="0.1"
 api-lib = { path = "../lib"}
+actix-files = "0.6.6"
